AGG-2604 - Fix some of the text colors broken by contrast.

--- a/src/main/webapp/bundles/core/less/bottombar.less
+++ b/src/main/webapp/bundles/core/less/bottombar.less
@@ -8,7 +8,7 @@
 	font-size: @bottombar-font-size;
 
 	background-color: @bottombar-bg-color;
-	h1, h2, h3, h4, h5, h6, h7, p, div, span, .promotion a {
+	h1, h2, h3, h4, h5, h6, p, div, span, .promotion a {
 		color: contrast(@bottombar-bg-color, @text-color, #fff);
 	}
 
