--- a/src/main/webapp/bundles/home/less/results.less
+++ b/src/main/webapp/bundles/home/less/results.less
@@ -365,7 +365,6 @@
 		// Normal heading
 		.labelInColumn {
 			.content {
-				color: contrast(@feature-odd-bg-color);
 				background: @feature-odd-bg-color;
 			}
 		}
